<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivitySwipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView2"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:elevation="6dp"
            android:src="@drawable/missing_avatar"
            android:translationZ="3dp"
            app:civ_border_color="@color/colorPrimaryDark"
            app:civ_border_width="3dp"
            app:layout_constraintEnd_toStartOf="@+id/userInformationFrame"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/behindProfileBanner"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:clipToPadding="false"
            app:layout_constraintBottom_toBottomOf="@id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageView2">

        </FrameLayout>

        <FrameLayout
            android:id="@+id/userInformationFrame"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/behindProfileBanner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@id/behindProfileBanner">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/userProfileUrlButton"
                    android:layout_centerHorizontal="true"
                    android:maxLines="2"
                    android:textAlignment="textStart"
                    android:textAppearance="@android:style/TextAppearance.Holo.WindowTitle"
                    android:textSize="24sp"
                    tools:text="REALLY LONG STRING TO CHECK WEIRD NAMES" />

                <LinearLayout
                    android:id="@+id/userProfileUrlButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/steamcommunity" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:maxLines="1"
                        android:text="@string/steam_text"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/userOpenDotaButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@id/userProfileUrlButton"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/odota" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:maxLines="1"
                        android:text="@string/opendota_text"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />
                </LinearLayout>


            </RelativeLayout>
        </FrameLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/behindProfileBanner">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/frameLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <android.support.v7.widget.CardView
                        android:id="@+id/cardRanked"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:contentPadding="6dp"
                        card_view:cardCornerRadius="6dp"
                        card_view:cardElevation="6dp"
                        card_view:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:elevation="6dp"
                                android:text="@string/card_ranked"
                                android:textAlignment="center"
                                android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView.PopupMenu" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="3dp"
                                android:background="@drawable/tapered_line_view" />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/frameLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <android.support.v7.widget.CardView
                        android:id="@+id/cardRecent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:contentPadding="6dp"
                        card_view:cardCornerRadius="6dp"
                        card_view:cardElevation="6dp"
                        card_view:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:elevation="6dp"
                                android:text="@string/card_recent"
                                android:textAlignment="center"
                                android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView.PopupMenu" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="3dp"
                                android:background="@drawable/tapered_line_view" />

                        </LinearLayout>
                    </android.support.v7.widget.CardView>
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/frameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <android.support.v7.widget.CardView
                        android:id="@+id/cardHeroes"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:contentPadding="6dp"
                        card_view:cardCornerRadius="6dp"
                        card_view:cardElevation="6dp"
                        card_view:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:elevation="6dp"
                                android:text="@string/card_heroes"
                                android:textAlignment="center"
                                android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView.PopupMenu" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="3dp"
                                android:background="@drawable/tapered_line_view" />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/frameLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <android.support.v7.widget.CardView
                        android:id="@+id/cardPlayers"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:contentPadding="6dp"
                        card_view:cardCornerRadius="6dp"
                        card_view:cardElevation="6dp"
                        card_view:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:elevation="6dp"
                                android:text="@string/card_players"
                                android:textAlignment="center"
                                android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView.PopupMenu" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="3dp"
                                android:background="@drawable/tapered_line_view" />

                        </LinearLayout>
                    </android.support.v7.widget.CardView>
                </FrameLayout>
            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.SwipeRefreshLayout>